qualifications extraction
